--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^16.2.0",
     "react-firebaseui": "^3.0.7",
     "react-responsive-modal": "^3.4.0",
+    "react-router-dom": "^5.0.1",
     "react-webcam": "^1.0.4",
     "socket.io": "^2.0.4",
     "style-loader": "^0.19.1",
